--- a/courseData.html
+++ b/courseData.html
@@ -8,6 +8,13 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+  <nav>
+    <ul class="menu">
+      <li><a href="courseData.html">Home</a></li>
+      <li><a href="#course-list">Courses</a></li>
+      <li><a href="signUpCoursePage.html">Register/SignUp</a></li>
+    </ul>
+  </nav>
   <div class="hero">
     <div class="hero-overlay">
       <h1>Discover Our Courses</h1>
